# SudokuSolver

./: README.md
RunTheCode-main/: Final.md  RunTheCode.cabal  stack.yaml
RunTheCode-main/.stack-work/: stack.sqlite3
RunTheCode-main/.stack-work/ghci/663f6703/: cabal_macros.h
RunTheCode-main/.stack-work/ghci/794ab81e/: cabal_macros.h
RunTheCode-main/.stack-work/install/aarch64-osx/febdad4706f06af0b0f38f6b94427b647a666aed4d90800056d1372c7737d3b3/9.2.4/pkgdb/: RunTheCode-0.1.0.0-IAOxAoavNzR1mUyF5owqTZ.conf  package.cache
RunTheCode-main/app/: GUI.hs  Generator.hs  Helper.hs  Main.hs
RunTheCode-main/src/: sudoku.css
RunTheCode-main/test/: Test.hs
